<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/result_dialog_text_padding"
                android:text="@string/feedback"
                android:textSize="@dimen/home_info_text_size"
                android:gravity="center"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/etFeedBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/home_info_text_size" />

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btnFeedBackClose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/home_logo_margin"
                        android:text="@string/close"
                        android:background="@drawable/rounded_button"
                        android:textSize="@dimen/home_info_text_size"
                        android:layout_gravity="center_horizontal"/>

                    <Button
                        android:id="@+id/btnSend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send"
                        android:background="@drawable/rounded_button"
                        android:textSize="@dimen/home_info_text_size"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>