<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/logo_height_display"
        android:layout_marginLeft="@dimen/logo_margin_display"
        android:layout_marginRight="@dimen/logo_margin_display"
        android:src="@drawable/pngtree"/>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/result_dialog_title_top"
        android:gravity="center"
        android:text="@string/result"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/result_dialog_title_size"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/result_dialog_layout_top">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_answers"
            android:paddingLeft="@dimen/result_dialog_text_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/result_dialog_text_size"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv1"
            android:layout_toRightOf="@+id/tv1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:text="0/0"
            android:textSize="@dimen/result_dialog_text_size"
            android:textStyle="bold|italic"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/result_dialog_layout_top">

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_result"
            android:paddingLeft="@dimen/result_dialog_text_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/result_dialog_text_size"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvTimeResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv2"
            android:layout_toRightOf="@+id/tv2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="0:00"
            android:textColor="@color/black"
            android:textSize="@dimen/result_dialog_text_size"
            android:textStyle="bold|italic"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnHistory"
            android:layout_width="@dimen/result_dialog_button_size"
            android:layout_height="@dimen/result_dialog_button_size"
            android:layout_margin="@dimen/result_dialog_button_margin"
            android:background="@drawable/history_button"/>
        <Button
            android:id="@+id/btnHome"
            android:layout_width="@dimen/result_dialog_button_size"
            android:layout_height="@dimen/result_dialog_button_size"
            android:layout_margin="@dimen/result_dialog_button_margin"
            android:background="@drawable/home_button"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lvHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </ListView>

</LinearLayout>